// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile m huge 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS2"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m medium 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "30px",
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS2"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m small 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  0: [object Object];
  1: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS2"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m wide 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  0: [object Object];
  1: [object Object];
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS2"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m without breakpoint should be like small 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS2 {
  0: [object Object];
  1: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS1"
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS2"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;
